# SMART-UAHP

./: .gitignore  README.md  RESULTS.md  SPEC.md  STORY.md  csp.py  pyproject.toml
benchmark/: smart_uahp_batch.html
bridge/: bridge.py
examples/: getting_started.py
smart_uahp/: __init__.py  breathing.py  bridge.py  identity.py  router.py  thermodynamics.py  zk_proof.py
